@@ -5,11 +5,13 @@ S3method(autoplot,smoof_wrapped_function)
 S3method(getDescription,smoof_function)
 S3method(getDescription,smoof_wrapped_function)
 S3method(getGlobalOptimum,smoof_multi_objective_function)
+S3method(getGlobalOptimum,smoof_shifted_function)
 S3method(getGlobalOptimum,smoof_single_objective_function)
 S3method(getGlobalOptimum,smoof_wrapped_function)
 S3method(getID,smoof_function)
 S3method(getID,smoof_wrapped_function)
 S3method(getLocalOptimum,smoof_multi_objective_function)
+S3method(getLocalOptimum,smoof_shifted_function)
 S3method(getLocalOptimum,smoof_single_objective_function)
 S3method(getLocalOptimum,smoof_wrapped_function)
 S3method(getLoggedValues,smoof_logging_function)
@@ -27,16 +29,21 @@ S3method(getNumberOfObjectives,smoof_wrapped_function)
 S3method(getNumberOfParameters,smoof_function)
 S3method(getNumberOfParameters,smoof_wrapped_function)
 S3method(getParamSet,smoof_function)
+S3method(getParamSet,smoof_shifted_function)
 S3method(getParamSet,smoof_wrapped_function)
 S3method(getRefPoint,smoof_multi_objective_function)
 S3method(getRefPoint,smoof_single_objective_function)
 S3method(getRefPoint,smoof_wrapped_function)
+S3method(getShift,smoof_function)
+S3method(getShift,smoof_shifted_function)
+S3method(getShift,smoof_wrapped_function)
 S3method(getTags,smoof_function)
 S3method(getTags,smoof_generator)
 S3method(getTags,smoof_wrapped_function)
 S3method(getUpperBoxConstraints,smoof_function)
 S3method(getUpperBoxConstraints,smoof_wrapped_function)
 S3method(getWrappedFunction,smoof_function)
+S3method(getWrappedFunction,smoof_shifted_function)
 S3method(getWrappedFunction,smoof_wrapped_function)
 S3method(hasBoxConstraints,smoof_function)
 S3method(hasBoxConstraints,smoof_wrapped_function)
@@ -88,6 +95,7 @@ export(getNumberOfEvaluations)
 export(getNumberOfObjectives)
 export(getNumberOfParameters)
 export(getRefPoint)
+export(getShift)
 export(getTags)
 export(getUpperBoxConstraints)
 export(getWrappedFunction)
@@ -245,6 +253,7 @@ export(makeZDT4Function)
 export(makeZDT6Function)
 export(makeZettlFunction)
 export(mnof)
+export(moveOrigin)
 export(plot1DNumeric)
 export(plot2DNumeric)
 export(plot3D)
